--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,5 @@
-Flask>=2.0.0
-python-dotenv>=0.19.0
-xrpl-py>=1.0.0
-SQLAlchemy>=1.4.0
-alembic>=1.7.0
-pytest>=7.0.0
-pytest-cov>=3.0.0
-flake8>=4.0.0
-black>=22.0.0
-mypy>=0.950
-flask-limiter>=3.5.0 
+Flask>=3.0.0
+Flask-Limiter>=3.5.0
+xrpl-py>=2.0.0
+python-dotenv>=1.0.0
+# Add any other production dependencies your app needs 
