--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,5 @@ python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 addopts = -v --cov=src --cov-report=term-missing
-markers =
-    asyncio: mark test as async
-    integration: mark test as integration test
+asyncio_mode = strict
+asyncio_default_fixture_loop_scope = function
